# TimeTrackerApp

./: CMakeLists.txt  README.md  TimeTracker.rc
.github/workflows/: build-linux.yml  build-windows.yml  build.yml
desktop/: TimeTracker.desktop
linux/: TimeTracker.desktop
scripts/: build-app-image.sh  build-setup-win.bat
scripts/post-windows/: installer.nsi
src/: TimeTracker.rc  definations.h  main.cpp
src/activewindow/: activewindow.cpp  activewindow.h  linux_x11.cpp  linux_x11.h  mac.h  mac.mm  win.cpp  win.h
src/activity/: activity.h  linux_x11.cpp  mac.mm  win.cpp  windowinfo.cpp  windowinfo.h
src/home/: home.cpp  home.h  home.ui
src/idledetector/: idle.h  idle_win.cpp  idle_x11.cpp  ldle_mac.mm
src/logger/: logger.cpp  logger.h
src/login/: login.cpp  login.h  login.ui
src/notification/: linux_notification.cpp  mac_notification.cpp  notification.h  win_notification.cpp  wintoastlib.cpp  wintoastlib.h
src/store/: store.cpp  store.h
src/updatechecker/: updatechecker.cpp  updatechecker.h
